--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,10 +20,10 @@ jobs:
           dotnet-version: '6.0'
 
       - name: Build project  
-        run: cd CeasarAPI dotnet restore; dotnet publish -o site
+        run:  dotnet restore; dotnet publish -o site;
 
       - name: create zip package
-        run: cd CeasarAPI/site && zip ../../site.zip *
+        run: cd site; zip ../site.zip *;
 
       - name: Deploy to aws EB
         uses: einaregilsson/beanstalk-deploy@v21
