--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID2}}
           aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY2 }}
           application_name: CeasarAPI
-          environment_name: CeasarAPI-env
+          environment_name: CeasarAPI-env-1
           version_label: ${{ github.run_id }}
           region: eu-north-1
           deployment_package: site.zip
